--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".feature.checkout.view.CheckoutFragment">
 
@@ -34,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/dp_16"
+        android:layout_marginBottom="@dimen/dp_8"
         android:labelFor="@id/text_view_special_instruction_label">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -43,11 +45,62 @@
             android:minLines="5" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_16"
+        android:elevation="@dimen/dp_4"
+        app:shapeAppearanceOverlay="@style/Theme.TailorMade.CornerRounded_16dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_12"
+            android:orientation="vertical">
+
+            <include
+                android:id="@+id/layout_checkout_total"
+                layout="@layout/layout_order_total"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <View
+                android:id="@+id/view_checkout_separator"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_1"
+                android:layout_marginVertical="@dimen/dp_8"
+                android:background="@color/color_grey_F1F1F1" />
+
+            <GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnCount="2"
+                android:rowCount="1"
+                android:useDefaultMargins="true">
+
+                <TextView
+                    android:id="@+id/text_view_checkout_payment_total"
+                    style="@style/TextAppearance.TailorMade.Caption.BlackHigh"
+                    android:layout_row="0"
+                    android:layout_column="0"
+                    android:text="@string/payment_total_label" />
+
+                <TextView
+                    android:id="@+id/text_view_order_quantity"
+                    style="@style/TextAppearance.TailorMade.Caption.PrimaryDark.Bold"
+                    android:layout_row="0"
+                    android:layout_column="1"
+                    android:layout_gravity="end"
+                    tools:text="@string/payment_total_label" />
+            </GridLayout>
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
+
     <Button
         android:id="@+id/button_checkout_make_order"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/dp_16"
-        android:layout_marginTop="@dimen/dp_16"
+        android:layout_marginTop="@dimen/dp_8"
         android:text="@string/make_order_label" />
 </LinearLayout>
